[2010-12-12]
    Added rename / delete file functionality and 

ALPHA - Initial Release